# printPNGasAscii

./: CMakeLists.txt  printAscii.c
include/: config.h  image_converter.h  utils.h  video_converter.h  video_player.h
include/conversion/: intensity_map.h
include/core/: ascii_ramp.h  config.h  image.h
include/io/: image_loader.h  image_saver.h
include/preprocessing/: dither.h  grayscale.h  invert.h  resize.h
src/: CMakeLists.txt  image-converter.c  main  main.c  printAscii.c  stb_image_implementation.c  utils.c
src/conversion/: intensity_map.c
src/core/: ascii_ramp.c  config..c  image.c
src/io/: image_loader.c  image_saver.c
src/preprocessing/: dither.c  grayscale.c  invert.c  resize.c
tests/: CMakeLists.txt  test_helpers.c  test_helpers.h  test_runner.c
tests/core/: CMakeLists.txt  test_image.c  test_runner.c
tests/io/: CMakeLists.txt  test_image_loader.c  test_runner.c
